<resources>
    <string name="app_name">人情笔记</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview_pay_name">name</string>
    <string name="textview_pay_money">TextView</string>
    <string name="textview_pay_date">TextView</string>
    <string name="button_ok">确定</string>
    <string name="name">请输入名字</string>
    <string name="money">请输入金额</string>
    <string name="date">请选择日期</string>
    <string name="reason">请选择缘由</string>
</resources>